--- a/coursesapp/templates/profileConfig.html
+++ b/coursesapp/templates/profileConfig.html
@@ -11,20 +11,11 @@ Configuración del perfil
     <div class="col-lg-4">
         <div class="card mb-4">
           <div class="card-body text-center">
-            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar"
-              class="rounded-circle img-fluid" style="width: 150px;">
-              <form name="formulario" method="post" action="/send.php" enctype="multipart/form-data">
-
-
-                <div class="d-flex justify-content-center mb-2">
-
-                  <input type="file" class="form-control-file" id="exampleFormControlFile1">
-
-                </div>
-
-              </form>
-            <h5 class="my-3">Nombre usuario</h5>
-            <p class="text-muted mb-4">País</p>
+            <img src="{{user.perfil.avatar.url}}" alt="avatar"
+              class="rounded-circle img-fluid" style="width: 150px; height: 150px;">           
+              
+            <h5 class="my-3">{{user.first_name}} {{user.last_name}}</h5>
+            <p class="text-muted mb-4">{{user.perfil.pais}}</p>
           </div>
         </div>
         <div class="card mb-4 mb-lg-0 text-center">
@@ -46,11 +37,16 @@ Configuración del perfil
       </div>
       
 <!--INGRESO DE LOS DATOS-->
+
 <div class="col-lg-8 ">
     <div class="card mb-4 ">
       <div class="card-body">
         <div class="row">
           <div class="col-sm-3">
+            
+            
+            <form method="post" enctype="multipart/form-data">
+              {% csrf_token %}
             <p class="mb-0">Nombre</p>
           </div>
           <div class="col-sm-8">
@@ -69,63 +65,38 @@ Configuración del perfil
         <hr>
         <div class="row">
           <div class="col-sm-3">
-            <p class="mb-0">Correo electrónico</p>
-          </div>
-          <div class="col-sm-8">
-            <input type="text" name="email" class="form-control " placeholder="Correo electrónico" />
-          </div>
-        </div>
-        <hr>
-        <div class="row">
-          <div class="col-sm-3">
-            <p class="mb-0">Usuario</p>
-          </div>
-          <div class="col-sm-8">
-            <input type="text" name="username" class="form-control " placeholder="Usuario" />
-          </div>
-        </div>
-        <hr>
-        <div class="row">
-          <div class="col-sm-3">
             <p class="mb-0">País</p>
           </div>
+
           <div class="col-sm-8">
-            <input type="text" name="country" class="form-control " placeholder="País" />
+          <select name="pais">
+            <option value="México">México</option>
+            <option value="USA">USA</option>
+          </select>
           </div>
+
+
+
+
         </div>
         <hr>
-        <div class="row">
-          <div class="col-sm-3">
-            <p class="mb-0">Contraseña</p>
-          </div>
-          <div class="col-sm-8">
-            <input type="text" name="password" class="form-control " placeholder="Contraseña" />
-          </div>
-        </div>
-        <hr>
-        <div class="row">
-          <div class="col-sm-3">
-            <p class="mb-0">Repetir contraseña</p>
-          </div>
-          <div class="col-sm-8">
-            <input type="text" name="password" class="form-control " placeholder="Contraseña" />
-          </div>
-        </div>
         <br>
         <div class="row">
             <div class="col-sm-8">
-                <div class="d-flex flex-row-reverse my-4 ml-4">
-                    <a class="nav-link text-white text-uppercase font-weight-bold btn  shadow-sm rounded ml-2" style="background-color:#158f46;" href="{% url 'profile' %}">
-                      GUARDAR
-                   </a>
-                   <a class="nav-link text-white text-uppercase font-weight-bold btn  shadow-sm rounded" style="background-color:#158f46;" href="{% url 'profile' %}">
-                    CANCELAR
-                 </a>
+                <div class="d-flex flex-row-reverse my-4 ml-4" >
+                  <button class="nav-link text-white text-uppercase font-weight-bold btn  shadow-sm rounded" style="background-color: #21AC59;" type="submit">Guardar datos</button>
                   </div>
             </div>
+
+          </form>
+
           </div>
       </div>
+
+  
     </div>
+
+
     </div>
 </div>
 </div>
