--- a/coursesapp/templates/courses.html
+++ b/coursesapp/templates/courses.html
@@ -9,8 +9,8 @@ Cursos
 <section style="background-color: #eee;">
     <div class="container py-5 style="margin-left: 20px;">
   
-      <div class="row" style="width: 1300px;">
-        <div class="col-lg-3" style="max-width: 23%;">
+      <div class="row" style="width: 111%;">
+        <div class="col-lg-2" style="max-width: 23%;">
           <div class="card mb-3" style="width: 250px;">
             <div class="card-body text-center">
               <form method="POST" action="">
@@ -87,7 +87,7 @@ Cursos
             </div>
           </div>
         </div>
-        <div class="col-lg-9" style="position: relative;"> 
+        <div class="col-lg-8" style="position: relative;"> 
           <div class="row" style= "width: auto;">
             <div class="col-lg-12">
             <div class="card mb-4 ">
