--- a/coursesapp/templates/courseView.html
+++ b/coursesapp/templates/courseView.html
@@ -28,7 +28,7 @@ Configuración
                             <span>⭐</span>
                             <span id="reviews">{{ course.rating }}</span> 
                             <div class="pt-3 pb-5">
-                                <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original.</p>
+                                {{course.description | safe}}
                             </div>
                             <div class="row justify-content-between pr-5 mr-5"> 
                                 <div class="d-flex"><h2>${{ course.price }}</h2><span class="align-item-bottom">mxn</span></div>
