--- a/coursesapp/templates/softskill4.html
+++ b/coursesapp/templates/softskill4.html
@@ -36,29 +36,14 @@ Perfil
             <div class="card-body p-3">
                 <h5>Habilidades</h5>
                 <hr class="mt-0 mb-4">
-                <div class=" justify-content-center text-center">
+                <div class="justify-items-center">
                     <h6>Soft skills</h6>
-                    <ul>{{user.skills.soft_skill1}}   <a href="{% url 'SoftSkill1' %}"><i class="fa-sharp fa-solid fa-pen-to-square"></i></a></ul>
-                    <ul>{{user.skills.soft_skill2}}   <a href="{% url 'SoftSkill2' %}"><i class="fa-sharp fa-solid fa-pen-to-square"></i></a></ul>
-                    <ul>{{user.skills.soft_skill3}}   <a href="{% url 'SoftSkill3' %}"><i class="fa-sharp fa-solid fa-pen-to-square"></i></a></ul>
-                    <ul>{{user.skills.soft_skill4}}   <a href="{% url 'SoftSkill4' %}"><i class="fa-sharp fa-solid fa-pen-to-square"></i></a></ul>
-                    <ul>{{user.skills.soft_skill5}}   <a href="{% url 'SoftSkill5' %}"><i class="fa-sharp fa-solid fa-pen-to-square"></i></a></ul>
+                  <form method="post" enctype="multipart/form-data">
+                      {% csrf_token %}
+                      <input type="text" name="soft_skill4" placeholder="SoftSkill">
+                      <button class="border-0" type="submit"><i class="fa-solid fa-floppy-disk"></i></button>
+                    </form>
                </div>
-               <hr class="mt-0 mb-4">
-               <div class=" justify-content-center text-center">
-                   <h6>Hard skills</h6>
-                   <ul>{{user.skills.hard_skill1}}   <a href="{% url 'HardSkill1' %}"><i class="fa-sharp fa-solid fa-pen-to-square"></i></a></ul>
-                   <ul>{{user.skills.hard_skill2}}   <a href="{% url 'HardSkill2' %}"><i class="fa-sharp fa-solid fa-pen-to-square"></i></a></ul>
-                   <ul>{{user.skills.hard_skill3}}   <a href="{% url 'HardSkill3' %}"><i class="fa-sharp fa-solid fa-pen-to-square"></i></a></ul>
-                   <ul>{{user.skills.hard_skill4}}   <a href="{% url 'HardSkill4' %}"><i class="fa-sharp fa-solid fa-pen-to-square"></i></a></ul>
-                   <ul>{{user.skills.hard_skill5}}   <a href="{% url 'HardSkill5' %}"><i class="fa-sharp fa-solid fa-pen-to-square"></i></a></ul>
-              </div>
-
-                  <div class="d-flex justify-content-center mb-2">
-                    <a class="nav-link text-white text-uppercase font-weight-bold btn shadow-sm rounded" style="background-color:#158f46;" href="{% url 'skills' %}">
-                      Editar Skills
-                   </a>
-                  </div>
             </div>
           </div>
         </div>
