--- a/coursesapp/templates/profileConfig.html
+++ b/coursesapp/templates/profileConfig.html
@@ -94,6 +94,9 @@ Configuración del perfil
                 <div class="d-flex flex-row-reverse my-4 ml-4" >
                   <button class="nav-link text-white text-uppercase font-weight-bold btn shadow-sm rounded" style="background-color: #21AC59;" type="submit">Guardar datos</button>
                   </div>
+                  <div class="d-flex flex-row-reverse my-4 ml-4" >
+                    <button class="nav-link text-white text-uppercase font-weight-bold btn shadow-sm rounded" style="background-color: #21AC59;""><a href="{% url 'profile'%}">Cancelar</a></button>
+                    </div>
             </div>
 
           </form>
